--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.5
-	yarn_mappings=1.16.5+build.6
-	loader_version=0.11.3
+	# check these on https://fabricmc.net/develop
+	minecraft_version=1.20.1
+	yarn_mappings=1.20.1+build.2
+	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 3.0.0
 	maven_group = com.williambl.defaultspawnpoints
 	archives_base_name = defaultspawnpoints
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.32.5+1.16
+	fabric_version=0.83.1+1.20.1
